<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawer_select"
        android:clickable="true"
        android:focusable="true"
        android:padding="9dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/sort_4"
            android:textSize="18sp" />
    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawer_select"
        android:clickable="true"
        android:focusable="true"
        android:padding="9dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/sort_3"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />


    <RelativeLayout
        android:id="@+id/rl_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawer_select"
        android:clickable="true"
        android:focusable="true"
        android:padding="9dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/sort_2"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawer_select"
        android:clickable="true"
        android:focusable="true"
        android:padding="9dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/sort_1"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>
