<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/rl_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawer_select"
        android:clickable="true"
        android:focusable="true"
        android:padding="9dp">

        <ImageView
            android:id="@+id/iv_1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_cut2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/iv_1"
            android:text="@string/modify"
            android:textSize="18sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/rl_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawer_select"
        android:clickable="true"
        android:focusable="true"
        android:padding="9dp">

        <ImageView
            android:id="@+id/iv_2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_delete2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_2"
            android:text="@string/delete"
            android:textSize="18sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/rl_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawer_select"
        android:clickable="true"
        android:focusable="true"
        android:padding="9dp">

        <ImageView
            android:id="@+id/iv_3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_share2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_3"
            android:text="@string/share"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>
